Fix jumping issue on slider nav

--- a/css/_slider.scss
+++ b/css/_slider.scss
@@ -55,6 +55,11 @@
   .slider__nav {
     width: 100%;
     z-index: 1;
+
+    .nav--left:hover,
+    .nav--right:hover {
+      cursor: pointer;
+    }
   }
 }
 
